--- a/src/global.scss
+++ b/src/global.scss
@@ -14,6 +14,7 @@ body {
   background-color: white;
   border-radius: 18px;
   width: 400px;
+  z-index: 9999;
   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto,
     'Helvetica Neue', Arial, 'Noto Sans', sans-serif, 'Apple Color Emoji',
     'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
@@ -99,6 +100,8 @@ body {
     small {
       font-size: 12px;
       color: $lightFont;
+      line-height: 14px;
+      display: block;
     }
     & > div {
       padding-right: 10px;
