--- a/src/global.scss
+++ b/src/global.scss
@@ -7,19 +7,37 @@ body {
 }
 
 .miconsent {
-  position: fixed;
-  left: 30px;
-  bottom: 30px;
-  box-shadow: rgba(0, 0, 0, 0.15) 0px 4px 24px, rgba(0, 0, 0, 0.05) 0px 2px 6px;
-  background-color: white;
-  border-radius: 18px;
-  width: 400px;
-  z-index: 9999;
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto,
-    'Helvetica Neue', Arial, 'Noto Sans', sans-serif, 'Apple Color Emoji',
-    'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
-  span {
-    display: block;
+  &.blocking {
+    width: 100vw;
+    height: 100vh;
+    background-color: transparentize($color: #f8f8ff, $amount: 0.5);
+    position: absolute;
+    left: 0;
+    top: 0;
+  }
+  &.blocking &__container {
+    top: 50%;
+    left: 50%;
+    bottom: auto;
+    transform: translate(-50%, -50%);
+  }
+  &__container {
+    position: fixed;
+    left: 30px;
+    bottom: 30px;
+    box-shadow: rgba(0, 0, 0, 0.15) 0px 4px 24px,
+      rgba(0, 0, 0, 0.05) 0px 2px 6px;
+    background-color: white;
+    border-radius: 18px;
+    width: 400px;
+    z-index: 9999;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI',
+      Roboto, 'Helvetica Neue', Arial, 'Noto Sans', sans-serif,
+      'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol',
+      'Noto Color Emoji';
+    span {
+      display: block;
+    }
   }
 
   // consent manager
