--- a/src/global.scss
+++ b/src/global.scss
@@ -30,6 +30,7 @@ body {
     background-color: white;
     border-radius: 18px;
     width: 400px;
+    max-width: 80vw;
     z-index: 9999;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI',
       Roboto, 'Helvetica Neue', Arial, 'Noto Sans', sans-serif,
@@ -62,6 +63,7 @@ body {
     display: flex;
   }
   &__option {
+    display: flex;
     width: 100%;
     text-align: center;
     border-top: 0.5px solid $lightBorder;
