--- a/src/global.scss
+++ b/src/global.scss
@@ -132,4 +132,65 @@ body {
     justify-content: space-between;
     margin-bottom: 15px;
   }
+  .switch {
+    position: relative;
+    display: inline-block;
+    width: 52px;
+    max-width: 52px;
+    min-width: 52px;
+    height: 20px;
+    margin-right: 8px;
+  }
+
+  /* Hide default HTML checkbox */
+  .switch input {
+    opacity: 0;
+    width: 0;
+    height: 0;
+  }
+
+  /* The slider */
+  .slider {
+    position: absolute;
+    cursor: pointer;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: #eee;
+    transition: 0.4s;
+  }
+
+  .slider:before {
+    position: absolute;
+    content: '';
+    height: 26px;
+    width: 26px;
+    left: -3px;
+    bottom: -3px;
+    background-color: white;
+    transition: 0.2s ease-out;
+    box-shadow: rgba(0, 0, 0, 0.15) 0px 3px 12px;
+  }
+
+  // input:checked + .slider {
+  //   background-color: #ffc823;
+  // }
+
+  // input:focus + .slider {
+  //   box-shadow: 0 0 1px #ffc823;
+  // }
+
+  input:checked + .slider:before {
+    transform: translateX(34px);
+  }
+
+  /* Rounded sliders */
+  .slider.round {
+    border-radius: 34px;
+  }
+
+  .slider.round:before {
+    border-radius: 50%;
+  }
 }
