--- a/src/global.scss
+++ b/src/global.scss
@@ -11,9 +11,10 @@ body {
     width: 100vw;
     height: 100vh;
     background-color: transparentize($color: #f8f8ff, $amount: 0.5);
-    position: absolute;
+    position: fixed;
     left: 0;
     top: 0;
+    z-index: 9999;
   }
   &.blocking &__container {
     top: 50%;
@@ -152,6 +153,14 @@ body {
     padding-bottom: 15px;
     padding-top: 15px;
     border: 1px solid $lightBorder;
+  }
+
+  &__moreinfo a {
+    font-size: 12px;
+    color: #4f5c65;
+    line-height: 14px;
+    margin-right: 15px;
+    text-decoration: underline;
   }
   .switch {
     position: relative;
