--- a/src/global.scss
+++ b/src/global.scss
@@ -1,6 +1,7 @@
 $hightlightcolor: #ffc823;
 $lightFont: #4f5c65;
 $lightBorder: #eee;
+$mobile: 768px;
 
 body {
   background-color: #eee;
@@ -29,9 +30,15 @@ body {
     box-shadow: rgba(0, 0, 0, 0.15) 0px 4px 24px,
       rgba(0, 0, 0, 0.05) 0px 2px 6px;
     background-color: white;
+    max-height: 80vh;
+    overflow-y: scroll;
+    &::-webkit-scrollbar {
+      width: 0px;  /* Remove scrollbar space */
+      background: transparent;  /* Optional: just make scrollbar invisible */
+    }
     // border-radius: 18px;
     width: 540px;
-    max-width: 80vw;
+    max-width: 90vw;
     z-index: 9999;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI',
       Roboto, 'Helvetica Neue', Arial, 'Noto Sans', sans-serif,
@@ -44,7 +51,10 @@ body {
 
   // consent manager
   &__content {
-    padding: 35px;
+    padding: 15px;
+    @media screen and (min-width: $mobile) {
+      padding: 35px;
+    }
     padding-bottom: 26px;
   }
   &__headline {
@@ -65,7 +75,10 @@ body {
   }
   &__options {
     display: flex;
-    padding: 35px;
+    padding: 15px;
+    @media screen and (min-width: $mobile) {
+      padding: 35px;
+    }
     padding-top: 0px;
     @media (max-width: 540px) {
       flex-direction: column;
