--- a/src/global.scss
+++ b/src/global.scss
@@ -77,7 +77,9 @@ body {
     display: flex;
     padding: 15px;
     @media screen and (min-width: $mobile) {
-      padding: 35px;
+      padding-left: 35px;
+      padding-right: 35px;
+      padding-bottom: 15px;
     }
     padding-top: 0px;
     @media (max-width: 540px) {
@@ -117,14 +119,33 @@ body {
       }
     }
   }
+  &__decline {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    button {
+      appearance: none;
+      background-color: transparent;
+      border: none;
+      font-size: 12px;
+      color: #4f5c65;
+      line-height: 14px;
+      margin-right: 15px;
+      &:hover {
+        text-decoration: underline;
+        cursor: pointer;
+      }
+    }
+  }
   &__scriptlist {
     & > div {
       padding: 5px;
       border: 0.5px solid $lightBorder;
       border-bottom: none;
       &:first-of-type {
-        border-top-left-radius: 5px;
-        border-top-right-radius: 5px;
+        border-top: none;
+        // border-top-left-radius: 5px;
+        // border-top-right-radius: 5px;
       }
       &:last-of-type {
         border-bottom-left-radius: 5px;
@@ -133,9 +154,49 @@ body {
       }
     }
   }
-  &__scriptlist_item {
+  &__scriptlist_general {
     display: flex;
     align-items: center;
+    & > div {
+      padding-right: 10px;
+      width: 100%;
+    }
+  }
+  &__scriptlist_info {
+    width: 100%;
+    overflow: hidden;
+    height: 0;
+    // display: flex;
+    margin-top: 5px;
+    & > div > span {
+      font-size: 11px;
+    }
+    &.open {
+      height: auto;
+    }
+    & > div {
+      display: flex;
+      width:100%;
+      border-bottom: 0.5px solid $lightBorder;
+      padding-bottom: 5px;
+      padding-top: 5px;
+      span:nth-child(1) {
+        width: 30%;
+      }
+      &:last-of-type {
+        border-bottom: none;
+      }
+      &:first-of-type {
+        border-top: 0.5px solid $lightBorder;
+      }
+    }
+  }
+  &__scriptlist_item {
+    // display: flex;
+    & > div {
+      width:100%;
+    }
+    
     &_icon {
       width: 20px;
       height: 20px;
@@ -148,13 +209,20 @@ body {
     }
     small {
       font-size: 12px;
+      margin-top: 3px;
+      display: block;
       color: $lightFont;
       line-height: 14px;
       display: block;
-    }
-    & > div {
-      padding-right: 10px;
-      width: 100%;
+      &.link {
+        font-size: 11px;
+        text-decoration: underline;
+        cursor: pointer;
+        user-select: none;
+        &:hover {
+          text-decoration: none;
+        }
+      }
     }
   }
   &__accept_all {
